--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,26 @@
       display: flex;
       align-items: center;
     }
+    
+    /* Estilo para todas las imágenes dentro de los carousels */
+  .carousel-item img {
+    height: 300px; /* Establece una altura específica para todas las imágenes */
+    width: auto; /* Permitir que el ancho se ajuste automáticamente para mantener la proporción */
+    display: block; /* Asegurar que la imagen sea un bloque para aplicar estilos correctamente */
+    margin: 0 auto; /* Centrar horizontalmente la imagen */
+  }
+
+  /* Establece una altura fija para los contenedores de los carousels */
+  .carousel-container {
+    height: 400px; /* Ajusta este valor según sea necesario */
+    overflow: hidden; /* Para evitar que las imágenes más grandes se desborden del contenedor */
+  }
+
+  /* Centrar verticalmente las imágenes dentro de los contenedores */
+  .carousel-inner {
+    display: flex;
+    align-items: center;
+  }
   </style>
 </head>
 <body>
@@ -30,34 +50,89 @@
     </ul>
   </div>
 </nav>
-
+<div class="container mt-3">
+  <h1 class="text-center">¡Encuentra tareas universitarias gratis!</h1>
+  <p class="lead text-center">Explora nuestra amplia colección de tareas y recursos educativos.</p>
+</div>
 <!-- Contenido de la página -->
 <div class="container mt-5">
  <!-- Contenido de la página -->
 <div class="container mt-5">
-  <!-- Inicio -->
-  <section id="inicio">
-    <div class="row">
-      <div class="col-md-6">
-        <div class="center-vertical">
-          <img src="Inge.jpg" class="img-fluid" style="max-width: 150px;" alt="Ingeniería de Sistemas">
-          <img src="Empresarial.jpg" class="img-fluid" style="max-width: 150px;" alt="Ingeniería Empresarial">
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="calculo1.png" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="calculo2.jpg" class="d-block w-100" alt="...">
-            </div>
+ <!-- Inicio -->
+<section id="inicio">
+  <div class="row align-items-center">
+    <div class="col-md-4 carousel-container">
+      <div id="carouselInicio1" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="cienciasBasicas1.jpg" class="d-block w-100 img-fluid" alt="Imagen 1">
+          </div>
+          <div class="carousel-item">
+            <img src="cienciasBasicas2.jpg" class="d-block w-100 img-fluid" alt="Imagen 2">
+          </div>
+          <div class="carousel-item">
+            <img src="cienciasBasicas3.jpg" class="d-block w-100 img-fluid" alt="Imagen 3">
           </div>
         </div>
+        <a class="carousel-control-prev" href="#carouselInicio1" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselInicio1" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
     </div>
-  </section>
+    <div class="col-md-4 carousel-container">
+      <div id="carouselInicio2" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="gestionEmpresarial1.jpg" class="d-block w-100 img-fluid" alt="Imagen 4">
+          </div>
+          <div class="carousel-item">
+            <img src="gestionEmpresarial2.jpg" class="d-block w-100 img-fluid" alt="Imagen 5">
+          </div>
+          <div class="carousel-item">
+            <img src="gestionEmpresarial3.png" class="d-block w-100 img-fluid" alt="Imagen 6">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselInicio2" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselInicio2" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+    <div class="col-md-4 carousel-container">
+      <div id="carouselInicio3" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="programacion1.jpg" class="d-block w-100 img-fluid" alt="Imagen 7">
+          </div>
+          <div class="carousel-item">
+            <img src="programacion2.jpg" class="d-block w-100 img-fluid" alt="Imagen 8">
+          </div>
+          <div class="carousel-item">
+            <img src="programacion3.jpg" class="d-block w-100 img-fluid" alt="Imagen 9">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselInicio3" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselInicio3" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+
 </div>
 
   <!-- Búsqueda de tareas -->
