--- a/Index.html
+++ b/Index.html
@@ -10,26 +10,20 @@
       display: flex;
       align-items: center;
     }
-    
-    /* Estilo para todas las imágenes dentro de los carousels */
-  .carousel-item img {
-    height: 300px; /* Establece una altura específica para todas las imágenes */
-    width: auto; /* Permitir que el ancho se ajuste automáticamente para mantener la proporción */
-    display: block; /* Asegurar que la imagen sea un bloque para aplicar estilos correctamente */
-    margin: 0 auto; /* Centrar horizontalmente la imagen */
-  }
-
-  /* Establece una altura fija para los contenedores de los carousels */
-  .carousel-container {
-    height: 400px; /* Ajusta este valor según sea necesario */
-    overflow: hidden; /* Para evitar que las imágenes más grandes se desborden del contenedor */
-  }
-
-  /* Centrar verticalmente las imágenes dentro de los contenedores */
-  .carousel-inner {
-    display: flex;
-    align-items: center;
-  }
+    .carousel-item img {
+      height: 300px;
+      width: auto;
+      display: block;
+      margin: 0 auto;
+    }
+    .carousel-container {
+      height: 400px;
+      overflow: hidden;
+    }
+    .carousel-inner {
+      display: flex;
+      align-items: center;
+    }
   </style>
 </head>
 <body>
@@ -46,95 +40,95 @@
       <li class="nav-item"><a class="nav-link" href="#categorias">Categorías</a></li>
       <li class="nav-item"><a class="nav-link" href="#ultimas">Últimas tareas añadidas</a></li>
       <li class="nav-item"><a class="nav-link" href="#destacados">Destacados</a></li>
-           
     </ul>
   </div>
 </nav>
+
+<!-- Contenido de la página -->
 <div class="container mt-3">
   <h1 class="text-center">¡Encuentra tareas universitarias gratis!</h1>
   <p class="lead text-center">Explora nuestra amplia colección de tareas y recursos educativos.</p>
 </div>
-<!-- Contenido de la página -->
-<div class="container mt-5">
- <!-- Contenido de la página -->
-<div class="container mt-5">
- <!-- Inicio -->
+
+<!-- Inicio -->
 <section id="inicio">
-  <div class="row align-items-center">
-    <div class="col-md-4 carousel-container">
-      <div id="carouselInicio1" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="cienciasBasicas1.jpg" class="d-block w-100 img-fluid" alt="Imagen 1">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-md-4 carousel-container">
+        <div id="carouselInicio1" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="cienciasBasicas1.jpg" class="d-block w-100 img-fluid" alt="Imagen 1">
+            </div>
+            <div class="carousel-item">
+              <img src="cienciasBasicas2.jpg" class="d-block w-100 img-fluid" alt="Imagen 2">
+            </div>
+            <div class="carousel-item">
+              <img src="cienciasBasicas3.jpg" class="d-block w-100 img-fluid" alt="Imagen 3">
+            </div>
           </div>
-          <div class="carousel-item">
-            <img src="cienciasBasicas2.jpg" class="d-block w-100 img-fluid" alt="Imagen 2">
-          </div>
-          <div class="carousel-item">
-            <img src="cienciasBasicas3.jpg" class="d-block w-100 img-fluid" alt="Imagen 3">
-          </div>
+          <a class="carousel-control-prev" href="#carouselInicio1" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselInicio1" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
-        <a class="carousel-control-prev" href="#carouselInicio1" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselInicio1" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
       </div>
-    </div>
-    <div class="col-md-4 carousel-container">
-      <div id="carouselInicio2" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="gestionEmpresarial1.jpg" class="d-block w-100 img-fluid" alt="Imagen 4">
+      <div class="col-md-4 carousel-container">
+        <div id="carouselInicio2" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="gestionEmpresarial1.jpg" class="d-block w-100 img-fluid" alt="Imagen 4">
+            </div>
+            <div class="carousel-item">
+              <img src="gestionEmpresarial2.jpg" class="d-block w-100 img-fluid" alt="Imagen 5">
+            </div>
+            <div class="carousel-item">
+              <img src="gestionEmpresarial3.png" class="d-block w-100 img-fluid" alt="Imagen 6">
+            </div>
           </div>
-          <div class="carousel-item">
-            <img src="gestionEmpresarial2.jpg" class="d-block w-100 img-fluid" alt="Imagen 5">
-          </div>
-          <div class="carousel-item">
-            <img src="gestionEmpresarial3.png" class="d-block w-100 img-fluid" alt="Imagen 6">
-          </div>
+          <a class="carousel-control-prev" href="#carouselInicio2" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselInicio2" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
-        <a class="carousel-control-prev" href="#carouselInicio2" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselInicio2" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
       </div>
-    </div>
-    <div class="col-md-4 carousel-container">
-      <div id="carouselInicio3" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="programacion1.jpg" class="d-block w-100 img-fluid" alt="Imagen 7">
+      <div class="col-md-4 carousel-container">
+        <div id="carouselInicio3" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="programacion1.jpg" class="d-block w-100 img-fluid" alt="Imagen 7">
+            </div>
+            <div class="carousel-item">
+              <img src="programacion2.jpg" class="d-block w-100 img-fluid" alt="Imagen 8">
+            </div>
+            <div class="carousel-item">
+              <img src="programacion3.jpg" class="d-block w-100 img-fluid" alt="Imagen 9">
+            </div>
           </div>
-          <div class="carousel-item">
-            <img src="programacion2.jpg" class="d-block w-100 img-fluid" alt="Imagen 8">
-          </div>
-          <div class="carousel-item">
-            <img src="programacion3.jpg" class="d-block w-100 img-fluid" alt="Imagen 9">
-          </div>
+          <a class="carousel-control-prev" href="#carouselInicio3" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselInicio3" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
-        <a class="carousel-control-prev" href="#carouselInicio3" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselInicio3" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
       </div>
     </div>
   </div>
 </section>
 
-</div>
-
+<!-- Contenido de la página -->
+<div class="container mt-5">
   <!-- Búsqueda de tareas -->
   <section id="busqueda">
     <div class="container">
@@ -147,9 +141,10 @@
           </div>
         </div>
       </div>
+      <!-- Lista de productos para descargar -->
       <div class="row">
         <div class="col-md-6">
-          <img src="tareaPopular1.png" class="img-fluid" style="max-width: 150px;" alt="Tarea Popular 1">
+          <img src="Ediferenciales.jpg" class="img-fluid" style="max-width: 150px;" alt="Tarea Popular 1">
         </div>
         <div class="col-md-6 center-vertical">
           <h3>Tarea Popular 1</h3>
@@ -158,7 +153,7 @@
       </div>
       <div class="row mt-4">
         <div class="col-md-6">
-          <img src="tareaPopular2.png" class="img-fluid" style="max-width: 150px;" alt="Tarea Popular 2">
+          <img src="electricidad.jpg" class="img-fluid" style="max-width: 150px;" alt="Tarea Popular 2">
         </div>
         <div class="col-md-6 center-vertical">
           <h3>Tarea Popular 2</h3>
@@ -167,74 +162,102 @@
       </div>
       <div class="row mt-4">
         <div class="col-md-6">
-          <img src="tareaPopular3.png" class="img-fluid" style="max-width: 150px;" alt="Tarea Popular 3">
+          <img src="progra2.png" class="img-fluid" style="max-width: 150px;" alt="Tarea Popular 3">
         </div>
         <div class="col-md-6 center-vertical">
           <h3>Tarea Popular 3</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at justo a est ultricies convallis.</p>
         </div>
       </div>
-    </div>
-  </section>
-
-  <!-- Últimas tareas añadidas -->
-  <section id="ultimas">
-    <div class="container">
-      <div class="text-center">
-        <h2>Últimas tareas añadidas</h2>
-      </div>
+      <!-- Lista de 20 productos para descargar -->
       <div class="row mt-4">
-        <div class="col-md-4">
-          <img src="tarea1.jpg" class="img-fluid" style="max-width: 150px;" alt="Tarea 1">
-          <h3 class="text-center">Tarea 1</h3>
-          <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#modalTarea1">VER</button>
-        </div>
-        <div class="col-md-4">
-          <img src="tarea2.jpg" class="img-fluid" style="max-width: 150px;" alt="Tarea 2">
-          <h3 class="text-center">Tarea 2</h3>
-          <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#modalTarea2">VER</button>
-        </div>
-        <div class="col-md-4">
-          <img src="tarea3.jpg" class="img-fluid" style="max-width: 150px;" alt="Tarea 3">
-          <h3 class="text-center">Tarea 3</h3>
-          <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#modalTarea3">VER</button>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Destacados -->
-  <section id="destacados">
-    <div class="container">
-      <div class="text-center">
-        <h2>Destacados</h2>
-      </div>
-      <div class="row mt-4">
-        <div class="col-md-4">
-          <img src="destacados1.jpg" class="img-fluid" style="max-width: 150px;" alt="Destacado 1">
-          <h3 class="text-center">Destacado 1</h3>
-          <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#modalDestacado1">VER</button>
-        </div>
-        <div class="col-md-4">
-          <img src="destacados2.jpg" class="img-fluid" style="max-width: 150px;" alt="Destacado 2">
-          <h3 class="text-center">Destacado 2</h3>
-          <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#modalDestacado2">VER</button>
-        </div>
-        <div class="col-md-4">
-          <img src="destacados3.jpg" class="img-fluid" style="max-width: 150px;" alt="Destacado 3">
-          <h3 class="text-center">Destacado 3</h3>
-          <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#modalDestacado3">VER</button>
+        <div class="col-md-12">
+          <h3>Productos para descargar</h3>
+          <ul>
+            <li>Practica1: 1,2 Calculo </li>
+            <li>Informe de laboratorio de fisica 1</li>
+            <li>Informes de Electricidad y Magnetismo</li>
+            <li>practicas de programacion 1</li>
+            <li>Practicas de programacion 2</li>
+            <li>Practicas de Estructura de datos</li>
+            <li>Practicas de redes 1</li>
+            <li>Practicas de redes 2</li>
+            <li>Practicas de Gestion Empresarial </li>
+            <li>Practicas de Sistemas informaticos 1</li>
+            <li>Practicas de Sistemas informaticos 2</li>
+            <li>Practicas de Sistemas informaticos 3</li>
+            <li>Practicas de Algebra lineal</li>
+            <li>Practicas de IOT</li>
+            <li>Practicas de Gestion Empresaria 2 </li>
+            <li>Practicas de Gestion Empresarial 3</li>
+            <li>Practicas de Estadisticas 2</li>
+            <li>Practicas de Estadisticas 3</li>
+            <li>Practicas de Sistemas operativos</li>
+            <li>Practicas de ingenieria de sofware</li>
+          </ul>
         </div>
       </div>
     </div>
   </section>
 </div>
+
+<!-- Últimas tareas añadidas -->
+<section id="ultimas">
+  <div class="container">
+    <div class="text-center">
+      <h2>Últimas tareas añadidas</h2>
+    </div>
+    <div class="row mt-4">
+      <div class="col-md-4">
+        <img src="tarea1.jpg" class="img-fluid" style="max-width: 150px;" alt="Tarea 1">
+        <h3 class="text-center">Tarea 1</h3>
+        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#modalTarea1">VER</button>
+      </div>
+      <div class="col-md-4">
+        <img src="tarea2.jpg" class="img-fluid" style="max-width: 150px;" alt="Tarea 2">
+        <h3 class="text-center">Tarea 2</h3>
+        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#modalTarea2">VER</button>
+      </div>
+      <div class="col-md-4">
+        <img src="tarea3.jpg" class="img-fluid" style="max-width: 150px;" alt="Tarea 3">
+        <h3 class="text-center">Tarea 3</h3>
+        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#modalTarea3">VER</button>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Destacados -->
+<section id="destacados">
+  <div class="container">
+    <div class="text-center">
+      <h2>Destacados</h2>
+    </div>
+    <div class="row mt-4">
+      <div class="col-md-4">
+        <img src="Redes2.jpg" class="img-fluid" style="max-width: 150px;" alt="Destacado 1">
+        <h3 class="text-center">Redes 2</h3>
+        <p class="text-center">Practicas y proyectos de Redes 2</p>
+        <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#modalDestacado1">VER</button>
+      </div>
+      <div class="col-md-4">
+        <img src="Empresarial.jpg" class="img-fluid" style="max-width: 150px;" alt="Destacado 2">
+        <h3 class="text-center">Empresarial</h3>
+        <p class="text-center">Todas las tareas pasadas de Gestion Empresarial 1, 2,3</p>
+        <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#modalDestacado2">VER</button>
+      </div>
+      <div class="col-md-4">
+        <img src="progra2.png" class="img-fluid" style="max-width: 150px;" alt="Destacado 3">
+        <h3 class="text-center">Programacion 2 </h3>
+        <p class="text-center">Todos las practicas de los 3 ultimos años de programacion 2 con el magister Castro</p>
+        <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#modalDestacado3">VER</button>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- Modales de Tareas -->
 <div class="modal fade" id="modalTarea1" tabindex="-1" role="dialog" aria-labelledby="modalTarea1Label" aria-hidden="true">
@@ -352,11 +375,9 @@
   </div>
 </div>
 
-<!-- Script de Bootstrap -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<!-- Scripts de Bootstrap y jQuery -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
 </body>
 </html>
-
