--- a/Index.html
+++ b/Index.html
@@ -147,8 +147,8 @@
           <img src="Ediferenciales.jpg" class="img-fluid" style="max-width: 150px;" alt="Tarea Popular 1">
         </div>
         <div class="col-md-6 center-vertical">
-          <h3>Tarea Popular 1</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at justo a est ultricies convallis.</p>
+          <h3>Ecuaciones Diferenciales</h3>
+          <p>Incluye libro y solucionario</p>
         </div>
       </div>
       <div class="row mt-4">
@@ -156,8 +156,8 @@
           <img src="electricidad.jpg" class="img-fluid" style="max-width: 150px;" alt="Tarea Popular 2">
         </div>
         <div class="col-md-6 center-vertical">
-          <h3>Tarea Popular 2</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at justo a est ultricies convallis.</p>
+          <h3>Electricidad y Magnetismo</h3>
+          <p> Solucionario de los problemas del Libro de Fisica Universitaria V2</p>
         </div>
       </div>
       <div class="row mt-4">
@@ -165,36 +165,98 @@
           <img src="progra2.png" class="img-fluid" style="max-width: 150px;" alt="Tarea Popular 3">
         </div>
         <div class="col-md-6 center-vertical">
-          <h3>Tarea Popular 3</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at justo a est ultricies convallis.</p>
+          <h3>Programacion 2</h3>
+          <p>Ejercicios de resueltos de programacion 2</p>
         </div>
       </div>
-      <!-- Lista de 20 productos para descargar -->
+      <!-- Lista de 20 productos epara descargar -->
       <div class="row mt-4">
         <div class="col-md-12">
           <h3>Productos para descargar</h3>
-          <ul>
-            <li>Practica1: 1,2 Calculo </li>
-            <li>Informe de laboratorio de fisica 1</li>
-            <li>Informes de Electricidad y Magnetismo</li>
-            <li>practicas de programacion 1</li>
-            <li>Practicas de programacion 2</li>
-            <li>Practicas de Estructura de datos</li>
-            <li>Practicas de redes 1</li>
-            <li>Practicas de redes 2</li>
-            <li>Practicas de Gestion Empresarial </li>
-            <li>Practicas de Sistemas informaticos 1</li>
-            <li>Practicas de Sistemas informaticos 2</li>
-            <li>Practicas de Sistemas informaticos 3</li>
-            <li>Practicas de Algebra lineal</li>
-            <li>Practicas de IOT</li>
-            <li>Practicas de Gestion Empresaria 2 </li>
-            <li>Practicas de Gestion Empresarial 3</li>
-            <li>Practicas de Estadisticas 2</li>
-            <li>Practicas de Estadisticas 3</li>
-            <li>Practicas de Sistemas operativos</li>
-            <li>Practicas de ingenieria de sofware</li>
-          </ul>
+<ul class="list-group">
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    Practica1: 1,2 Calculo 
+    <a href="enlace_practica1_calculo.pdf" class="btn btn-primary btn-sm" target="_blank">Descargar</a>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    Informe de laboratorio de física 1 
+    <a href="enlace_informe_fisica1.pdf" class="btn btn-primary btn-sm" target="_blank">Descargar</a>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    Informes de Electricidad y Magnetismo 
+    <a href="enlace_informes_electricidad_magnetismo.pdf" class="btn btn-primary btn-sm" target="_blank">Descargar</a>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    Practicas de programación 1 
+    <a href="enlace_practicas_programacion1.pdf" class="btn btn-primary btn-sm" target="_blank">Descargar</a>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    Practicas de programación 2 
+    <a href="enlace_practicas_programacion2.pdf" class="btn btn-primary btn-sm" target="_blank">Descargar</a>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    Practicas de Estructura de datos 
+    <a href="enlace_practicas_estructura_datos.pdf" class="btn btn-primary btn-sm" target="_blank">Descargar</a>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    Practicas de redes 1 
+    <a href="enlace_practicas_redes1.pdf" class="btn btn-primary btn-sm" target="_blank">Descargar</a>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    Practicas de redes 2 
+    <a href="enlace_practicas_redes2.pdf" class="btn btn-primary btn-sm" target="_blank">Descargar</a>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    Practicas de Gestion Empresarial 
+    <a href="enlace_practicas_gestion_empresarial.pdf" class="btn btn-primary btn-sm" target="_blank">Descargar</a>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    Practicas de Sistemas informaticos 1 
+    <a href="enlace_practicas_sistemas_informaticos1.pdf" class="btn btn-primary btn-sm" target="_blank">Descargar</a>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    Practicas de Sistemas informaticos 2 
+    <a href="enlace_practicas_sistemas_informaticos2.pdf" class="btn btn-primary btn-sm" target="_blank">Descargar</a>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    Practicas de Sistemas informaticos 3 
+    <a href="enlace_practicas_sistemas_informaticos3.pdf" class="btn btn-primary btn-sm" target="_blank">Descargar</a>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    Practicas de Algebra lineal 
+    <a href="enlace_practicas_algebra_lineal.pdf" class="btn btn-primary btn-sm" target="_blank">Descargar</a>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    Practicas de IOT 
+    <a href="enlace_practicas_iot.pdf" class="btn btn-primary btn-sm" target="_blank">Descargar</a>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    Practicas de Gestion Empresarial 2 
+    <a href="enlace_practicas_gestion_empresarial2.pdf" class="btn btn-primary btn-sm" target="_blank">Descargar</a>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    Practicas de Gestion Empresarial 3 
+    <a href="enlace_practicas_gestion_empresarial3.pdf" class="btn btn-primary btn-sm" target="_blank">Descargar</a>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    Practicas de Estadisticas 2 
+    <a href="enlace_practicas_estadisticas2.pdf" class="btn btn-primary btn-sm" target="_blank">Descargar</a>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    Practicas de Estadisticas 3 
+    <a href="enlace_practicas_estadisticas3.pdf" class="btn btn-primary btn-sm" target="_blank">Descargar</a>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    Practicas de Sistemas operativos 
+    <a href="enlace_practicas_sistemas_operativos.pdf" class="btn btn-primary btn-sm" target="_blank">Descargar</a>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    Practicas de ingenieria de software 
+    <a href="enlace_practicas_ingenieria_software.pdf" class="btn btn-primary btn-sm" target="_blank">Descargar</a>
+  </li>
+</ul>
+
+
         </div>
       </div>
     </div>
@@ -208,27 +270,86 @@
       <h2>Últimas tareas añadidas</h2>
     </div>
     <div class="row mt-4">
-      <div class="col-md-4">
-        <img src="tarea1.jpg" class="img-fluid" style="max-width: 150px;" alt="Tarea 1">
-        <h3 class="text-center">Tarea 1</h3>
-        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <div class="col-md-4 text-center">
+        <img src="casoIkea.jpg" class="img-fluid" style="max-width: 160px;" alt="Tarea 1">
+        <h3 class="text-center">Marketing</h3>
+        <p class="text-center">-----Caso de estudio sobre IKEA----</p>
         <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#modalTarea1">VER</button>
       </div>
-      <div class="col-md-4">
-        <img src="tarea2.jpg" class="img-fluid" style="max-width: 150px;" alt="Tarea 2">
-        <h3 class="text-center">Tarea 2</h3>
-        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <div class="col-md-4 text-center">
+        <img src="calculo1.png" class="img-fluid" style="max-width: 140px;" alt="Tarea 2">
+        <h3 class="text-center">Calculo 1</h3>
+        <p class="text-center">Numeros reales / Geometria Analitica / Limites y continuidad / Derivadas</p>
         <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#modalTarea2">VER</button>
       </div>
-      <div class="col-md-4">
-        <img src="tarea3.jpg" class="img-fluid" style="max-width: 150px;" alt="Tarea 3">
-        <h3 class="text-center">Tarea 3</h3>
-        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <div class="col-md-4 text-center">
+        <img src="programacion1.jpg" class="img-fluid" style="max-width: 250px;" alt="Tarea 3">
+        <h3 class="text-center">Programacion 2</h3>
+        <p class="text-center">Diseño orientado a objetos</p>
         <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#modalTarea3">VER</button>
       </div>
     </div>
   </div>
 </section>
+
+<!-- Modales de Tareas -->
+<div class="modal fade" id="modalTarea1" tabindex="-1" role="dialog" aria-labelledby="modalTarea1Label" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="modalTarea1Label">Tarea 1</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <a href="CasoDeEstudio1.pdf" target="_blank">Ver PDF</a> <!-- Enlace al PDF -->
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="modalTarea2" tabindex="-1" role="dialog" aria-labelledby="modalTarea2Label" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="modalTarea2Label">Tarea 2</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <a href="Calculo1.pdf" target="_blank">Ver PDF</a> <!-- Enlace al primer PDF -->
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="modalTarea3" tabindex="-1" role="dialog" aria-labelledby="modalTarea3Label" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="modalTarea3Label">Tarea 3</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <a href="ProgramacionII.pdf" target="_blank">Ver PDF</a> <!-- Enlace al primer PDF -->
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 <!-- Destacados -->
 <section id="destacados">
