--- a/Index.html
+++ b/Index.html
@@ -180,7 +180,7 @@
   </li>
   <li class="list-group-item d-flex justify-content-between align-items-center">
     Informe de laboratorio de física 1 
-    <a href="enlace_informe_fisica1.pdf" class="btn btn-primary btn-sm" target="_blank">Descargar</a>
+    <a href="INFORME LEY DE OHM.pdf" class="btn btn-primary btn-sm" target="_blank">Descargar</a>
   </li>
   <li class="list-group-item d-flex justify-content-between align-items-center">
     Informes de Electricidad y Magnetismo 
