--- a/index.html
+++ b/index.html
@@ -312,19 +312,19 @@
         <ul class="list-group">
           <li class="list-group-item d-flex justify-content-between align-items-center">
             Practica1: 1,2 Calculo 
-            <button onclick="mostrarVentana('python.png', 'enlace_practica1_calculo.pdf')">Descargar</button>
+            <button onclick="mostrarVentana('tareas.jpeg', 'enlace_practica1_calculo.pdf')">Descargar</button>
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center">
             Practica1: Fisica 
-            <button onclick="mostrarVentana('pagina.jpg', 'enlace_practica1_fisica.pdf')">Descargar</button>
+            <button onclick="mostrarVentana('tareas.jpeg', 'enlace_practica1_fisica.pdf')">Descargar</button>
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center">
             Informes de Electricidad y Magnetismo 
-            <button onclick="mostrarVentana('pagina.jpg', 'informe_electricidad_magnetismo.pdf')">Descargar</button>
+            <button onclick="mostrarVentana('tareas.jpeg', 'informe_electricidad_magnetismo.pdf')">Descargar</button>
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center">
             Practicas de programación 1 
-            <button onclick="mostrarVentana('pagina.jpg', 'enlace_practicas_programacion1.pdf')">Descargar</button>
+            <button onclick="mostrarVentana('tareas.jpeg', 'enlace_practicas_programacion1.pdf')">Descargar</button>
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center">
             Practicas de programación 2 
@@ -332,43 +332,43 @@
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center">
             Practicas de Estructura de datos 
-            <button onclick="mostrarVentana('pagina.jpg', 'enlace_practicas_estructura_datos.pdf')">Descargar</button>
+            <button onclick="mostrarVentana('tareas.jpeg', 'enlace_practicas_estructura_datos.pdf')">Descargar</button>
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center">
             Practicas de redes 1 
-            <button onclick="mostrarVentana('pagina.jpg', 'enlace_practicas_redes1.pdf')">Descargar</button>
+            <button onclick="mostrarVentana('tareas.jpeg', 'enlace_practicas_redes1.pdf')">Descargar</button>
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center">
             Practicas de redes 2 
-            <button onclick="mostrarVentana('pagina.jpg', 'enlace_practicas_redes2.pdf')">Descargar</button>
+            <button onclick="mostrarVentana('tareas.jpeg', 'enlace_practicas_redes2.pdf')">Descargar</button>
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center">
             Practicas de Gestion Empresarial 
-            <button onclick="mostrarVentana('pagina.jpg', 'enlace_practicas_gestion_empresarial.pdf')">Descargar</button>
+            <button onclick="mostrarVentana('tareas.jpeg', 'enlace_practicas_gestion_empresarial.pdf')">Descargar</button>
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center">
             Practicas de Sistemas informaticos 1 
-            <button onclick="mostrarVentana('pagina.jpg', 'enlace_practicas_sistemas_informaticos1.pdf')">Descargar</button>
+            <button onclick="mostrarVentana('tareas.jpeg', 'enlace_practicas_sistemas_informaticos1.pdf')">Descargar</button>
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center">
             Practicas de Sistemas informaticos 2 
-            <button onclick="mostrarVentana('pagina.jpg', 'enlace_practicas_sistemas_informaticos2.pdf')">Descargar</button>
+            <button onclick="mostrarVentana('tareas.jpeg', 'enlace_practicas_sistemas_informaticos2.pdf')">Descargar</button>
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center">
             Practicas de Sistemas informaticos 3 
-            <button onclick="mostrarVentana('pagina.jpg', 'enlace_practicas_sistemas_informaticos3.pdf')">Descargar</button>
+            <button onclick="mostrarVentana('tareas.jpeg', 'enlace_practicas_sistemas_informaticos3.pdf')">Descargar</button>
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center">
             Practicas de Algebra lineal 
-            <button onclick="mostrarVentana('pagina.jpg', 'enlace_practicas_algebra_lineal.pdf')">Descargar</button>
+            <button onclick="mostrarVentana('tareas.jpeg', 'enlace_practicas_algebra_lineal.pdf')">Descargar</button>
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center">
             Practicas de IOT 
-            <button onclick="mostrarVentana('pagina.jpg', 'enlace_practicas_iot.pdf')">Descargar</button>
+            <button onclick="mostrarVentana('tareas.jpeg', 'enlace_practicas_iot.pdf')">Descargar</button>
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center">
             Practicas de Gestion Empresarial 2 
-            <button onclick="mostrarVentana('pagina.jpg', 'enlace_practicas_gestion_empresarial2.pdf')">Descargar</button>
+            <button onclick="mostrarVentana('tareas.jpeg', 'enlace_practicas_gestion_empresarial2.pdf')">Descargar</button>
           </li>
           <li class="list-group-item d-flex justify-content-between align-items-center">
             Practicas de Gestion Empresarial 3 
@@ -405,19 +405,19 @@
         <img src="casoIkea.jpg" class="img-fluid align-bottom" style="max-width: 180px; max-height: 200px; object-fit: cover;" alt="Tarea 1" onclick="mostrarVentana('casoIkea.jpg', 'https://carquispe.github.io/TareaGratis/', 'Tarea1.pdf')">
         <h3 class="text-center">Marketing</h3>
         <p class="text-center">-----Caso de estudio sobre IKEA----</p>
-        <button type="button" class="btn btn-primary btn-block" onclick="mostrarVentana('casoIkea.jpg', 'https://carquispe.github.io/TareaGratis/', 'Tarea1.pdf')">VER</button>
+        <button type="button" class="btn btn-primary btn-block" onclick="mostrarVentana('tareas.jpeg', 'https://carquispe.github.io/TareaGratis/', 'Tarea1.pdf')">VER</button>
       </div>
       <div class="col-md-4">
         <img src="calculo1.png" class="img-fluid align-bottom" style="max-width: 180px; max-height: 200px; object-fit: cover;" alt="Tarea 2" onclick="mostrarVentana('calculo1.png', 'https://carquispe.github.io/TareaGratis/', 'Tarea2.pdf')">
         <h3 class="text-center">Calculo 1</h3>
         <p class="text-center">Limites y continuidad-Derivadas-G.Analitica</p>
-        <button type="button" class="btn btn-primary btn-block" onclick="mostrarVentana('calculo1.png', 'https://carquispe.github.io/TareaGratis/', 'Tarea2.pdf')">VER</button>
+        <button type="button" class="btn btn-primary btn-block" onclick="mostrarVentana('tareas.jpeg', 'https://carquispe.github.io/TareaGratis/', 'Tarea2.pdf')">VER</button>
       </div>
       <div class="col-md-4">
         <img src="programacion1.jpg" class="img-fluid align-bottom" style="max-width: 180px; max-height: 200px; object-fit: cover;" alt="Tarea 3" onclick="mostrarVentana('programacion1.jpg', 'https://carquispe.github.io/TareaGratis/', 'Tarea3.pdf')">
         <h3 class="text-center">Programacion 2</h3>
         <p class="text-center">Diseño orientado a objetos</p>
-        <button type="button" class="btn btn-primary btn-block" onclick="mostrarVentana('programacion1.jpg', 'https://carquispe.github.io/TareaGratis/', 'Tarea3.pdf')">VER</button>
+        <button type="button" class="btn btn-primary btn-block" onclick="mostrarVentana('tareas.jpeg', 'https://carquispe.github.io/TareaGratis/', 'Tarea3.pdf')">VER</button>
       </div>
     </div>
   </div>
@@ -517,13 +517,13 @@
         <img src="Empresarial.jpg" class="img-fluid" style="max-width: 150px;" alt="Destacado 2" onclick="mostrarVentana('Empresarial.jpg', 'https://www.silabs.com/developers/usb-to-uart-bridge-vcp-drivers?tab=downloads', 'enlace_destacado_2.pdf')">
         <h3 class="text-center">Empresarial</h3>
         <p class="text-center"> Tareas pasadas de Gestion Empresarial </p>
-        <button type="button" class="btn btn-primary btn-block" onclick="mostrarVentana('Empresarial.jpg', 'https://www.silabs.com/developers/usb-to-uart-bridge-vcp-drivers?tab=downloads', 'enlace_destacado_2.pdf')">VER</button>
+        <button type="button" class="btn btn-primary btn-block" onclick="mostrarVentana('sabores.jpeg', 'https://isabelbustamanteq.github.io/SaboresLlajta/', 'enlace_destacado_2.pdf')">VER</button>
       </div>
       <div class="col-md-4">
         <img src="progra2.png" class="img-fluid" style="max-width: 150px;" alt="Destacado 3" onclick="mostrarVentana('progra2.png', 'https://carquispe.github.io/TareaGratis', 'enlace_destacado_3.pdf')">
         <h3 class="text-center">Programacion 2 </h3>
         <p class="text-center">Practicas-programacion2 (Magister Castro) </p>
-        <button type="button" class="btn btn-primary btn-block" onclick="mostrarVentana('progra2.png', 'https://carquispe.github.io/TareaGratis', 'enlace_destacado_3.pdf')">VER</button>
+        <button type="button" class="btn btn-primary btn-block" onclick="mostrarVentana('produc.jpeg', ' https://carquispe.github.io/TareaGratis/', 'enlace_destacado_3.pdf')">VER</button>
       </div>
     </div>
   </div>
