--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
         <img src="progra2.png" class="img-fluid" style="max-width: 150px;" alt="Destacado 3" onclick="mostrarVentana('progra2.png', 'https://carquispe.github.io/TareaGratis', 'enlace_destacado_3.pdf')">
         <h3 class="text-center">Programacion 2 </h3>
         <p class="text-center">Practicas-programacion2 (Magister Castro) </p>
-        <button type="button" class="btn btn-primary btn-block" onclick="mostrarVentana('produc.jpeg', ' https://carquispe.github.io/TareaGratis/', 'enlace_destacado_3.pdf')">VER</button>
+        <button type="button" class="btn btn-primary btn-block" onclick="mostrarVentana('produc.jpeg', ' https://valeryarauco.github.io/productReview/', 'enlace_destacado_3.pdf')">VER</button>
       </div>
     </div>
   </div>
