--- a/index.html
+++ b/index.html
@@ -184,13 +184,19 @@
         <div id="carouselInicio2" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="gestionEmpresarial1.jpg" class="d-block w-100 img-fluid" alt="Imagen 4">
+              <a href="https://ale-saul.github.io/CochaLove/" target="_blank">
+                <img src="CochaLove.jpg" class="d-block w-100 img-fluid" alt="Imagen 4">
+              </a>
             </div>
             <div class="carousel-item">
-              <img src="gestionEmpresarial2.jpg" class="d-block w-100 img-fluid" alt="Imagen 5">
+              <a href="https://ale-saul.github.io/CochaLove/" target="_blank">
+                <img src="CochaLove1.jpg" class="d-block w-100 img-fluid" alt="Imagen 5">
+              </a>
             </div>
             <div class="carousel-item">
-              <img src="gestionEmpresarial3.png" class="d-block w-100 img-fluid" alt="Imagen 6">
+              <a href="https://ale-saul.github.io/CochaLove/" target="_blank">
+                <img src="CochaLove.jpg" class="d-block w-100 img-fluid" alt="Imagen 6">
+              </a>
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselInicio2" role="button" data-slide="prev">
